--- a/_config.yml
+++ b/_config.yml
@@ -46,6 +46,10 @@ links:
   - title: Awards(TBD)
     url: /awards/
   - title: Hobbies(TBD)
+  - title: 复旦联培
+    url: /FDU-Join-Cultivation
+  - title: 飞跃手册
+    url: /fly-overseas-leaflet
   #  url: /hobbies/
   #- title: Blogs
   #  url: /blogs/
