--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ owner:
   github: Antonio12138
   zhihu: https://www.zhihu.com/people/tang-zi-fan-27
   linkedin(TBD): https://www.linkedin.com/in/%E5%AD%90%E5%87%A1-%E6%B1%A4-1180852ab/
-  scholar: https://scholar.google.com/citations?user=8igSoWgAAAAJ
+  # scholar: https://scholar.google.com/citations?user=8igSoWgAAAAJ
   #bilibili: 594030035
   #researchgate: https://www.researchgate.net/profile/Hanlin-Cai
 
