--- a/_config.yml
+++ b/_config.yml
@@ -48,9 +48,9 @@ links:
   - title: Lecture Note
     url: /zifan-Lecture-Note
   - title: Hobbies(TBD)
-  - title: 复旦联培
-    url: /FDU-Join-Cultivation
-  - title: 飞跃手册
+  - title: 复旦联培(TBD)
+    url: /FDU-Joint-Cultivation
+  - title: 飞跃手册(TBD)
     url: /fly-overseas-leaflet
   #  url: /hobbies/
   #- title: Blogs
