--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: https://anatole12138.github.io
 # Owner/author information
 owner:
   name: Zifan Tang
-  avatar: zifan.jpg
+  avatar: zifan-1.jpg
   bio: My mission, is to live the Sun's life.
   email: cduttangzifan@gmail.com
   cv: https://anatole12138.github.io/file/CV-Zifan-Tang-04-2024.pdf
