--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ links:
   - title: Awards(TBD)
     url: /awards/
   - title: Lecture Note
-    url: /zifan-Lecture-Note
+    url: /Lecture Note
   - title: Hobbies(TBD)
   - title: 复旦联培(TBD)
     url: /FDU-Joint-Cultivation
