--- a/_config.yml
+++ b/_config.yml
@@ -49,9 +49,9 @@ links:
     url: /Lecture Note
   - title: Hobbies(TBD)
   - title: 复旦联培(TBD)
-    url: /FDU-Joint-Cultivation
+    url: /FDU Joint Cultivation
   - title: 飞跃手册(TBD)
-    url: /fly-overseas-leaflet
+    url: /Fly Overseas Guide
   #  url: /hobbies/
   #- title: Blogs
   #  url: /blogs/
