--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ links:
     url: /awards/
   - title: Lecture Note
     url: /Lecture Note
-  - title: Hobbies(TBD)
+  #- title: Hobbies(TBD)
   - title: 复旦联培(TBD)
     url: /FDU Joint Cultivation
   - title: 飞跃手册(TBD)
